2007-04-27  Rodrigo Moya <rodrigo@gnome-db.org>

	* default-applications-accessibility.desktop.in.in: renamed Bugzilla
	product.

2007-04-23  George Kraft IV <gk4@austin.ibm.com>

	* gnome-da-applet.c: better icons for A11Y categories.

2007-04-18  Rodrigo Moya <rodrigo@gnome-db.org>

	Patch from SuSE package

	* gnome-default-applications.xml.in: added Seamonkey as web browser and
	mail reader.

2007-04-08  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Kristof Vansant <de_lupus@pandora.be>

	* gnome-default-applications-properties.glade: don't require gnome
	glade lib

2007-03-20  Priit Laes  <plaes@svn.gnome.org>

	* gnome-da-capplet.c: Glue code to tie everything together.
	* gnome-da-capplet.h: Added widgets and defines for default mediaplayer.
	* gnome-da-xml.c: (gnome_da_xml_load_xml), (gnome_da_xml_free): Added
	mediaplayer data parser.
	* gnome-da-item.c: Changed occurrences of MailItem to SimpleItem, so we
	can also use it for mediaplayers.
	* gnome-da-item.h: Ditto.
	* gnome-default-applications-properties.glade: Make Multimedia tab visible
	and change the UI to include our favorite mediaplayer selector.
	* gnome-default-applications.xml.in: Add some media players to the list.

	Introduces preferred media application support. Bug #362578.

2007-02-13  Jens Granseuer  <jensgr@gmx.net>

	* gnome-da-capplet.c: (web_gconf_changed_cb): don't try to read into
	invalid territory when the user set a custom command without spaces.
	Closes bug #407601.

2007-02-13  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am:
	* gnome-da-capplet.c: (show_dialog):
	* gnome-da-xml.c: (gnome_da_xml_load_list): really fix DATADIR and
	make directory definitions more consistent with other capplets.
	Closes bug #407597.

2007-02-03  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am: fix DATADIR define

2007-02-03  Jens Granseuer  <jensgr@gmx.net>

	* gnome-da-capplet.c: (fill_combo_box), (show_dialog), (main):
	* gnome-da-xml.c: (gnome_da_xml_load_xml),